# twitch-sc2-irc-bot

./: .gitignore  README.md  bot.py  configure.py  pyproject.toml
.github/workflows/: deploy.yml  pythonpackage.yml
models/: channels.py  information.py  player.py  players.py  user.py  users.py
systemd/: thelistbot.service
