[tool.poetry]
name = "burny_test_template"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
idna-ssl = "^1.1.0"
loguru = "^0.5.3"
aiocontextvars = "^0.2.2"
atomicwrites = "^1.3.0"
contextvars = "^2.4"
win32-setctime = "^1.0.3"
dataclasses-json = "^0.5.2"
twitchio = "^1.2.2"
arrow = "^1.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
