[tool.poetry]
name = "twitch_sc2_irc_bot"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
aiohttp = "^3.7.4"
idna-ssl = "^1.1.0"
loguru = "^0.6.0"
aiocontextvars = "^0.2.2"
atomicwrites = "^1.3.0"
contextvars = "^2.4"
win32-setctime = "^1.0.3"
dataclasses-json = "^0.5.2"
twitchio = "^2.4.0"
arrow = "^1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
